# TTT

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/include/: Client.hpp
client/src/: Client.cpp  main.cpp
cmake/: source_var.cmake
common/: User.cpp  User.hpp
logger/: logger.cpp  logger.h
messages/: packaging.cpp  packaging.hpp
proto/messages/: UserMessage.proto
server/: CMakeLists.txt
server/include/: Server.hpp  Session.hpp
server/src/: Server.cpp  Session.cpp  main.cpp
